--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,34 @@
+#homemaindiv{
+    background-image: url(https://wallpaperaccess.com/full/253332.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}
+#homesubdiv{
+    margin-left: 30px;
+    margin-top: 70px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
+}
 #nav1{
-    color:rgb(209, 14, 14); 
+    color: white;
     font-weight: 700; 
+    margin-left: 20px;
+    font-size:large;
+    text-decoration: none;
+}
+#nav1:hover{
+    color: rgb(209, 14, 14);
+    transition-duration: .5s;
 }
 #nav2{
-    background-color: aqua;
+    font-size:large;
     color: white;
     font-weight: 700;
-    margin-left: 10px;
+    margin-left: 20px;
     display: flex;
     text-decoration: none;
     align-items: center;
@@ -15,22 +37,10 @@
     color: rgb(209, 14, 14);
     transition-duration: .5s;
 }
-#nav3{
-    border-radius: 50%;
-    width:50px ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 25px;
-    margin-left: 10px;
-    background-color: white;
-    color: black;
+#nav{
+   background-image: linear-gradient(to bottom , rgb(166, 0, 255),rgb(230, 79, 207));
 }
-#nav3:hover{
-    background-color:rgb(209, 14, 14); 
-    color: rgb(94, 5, 54);
-    transition-duration: .5s;
-}
+
 #aboutmaindiv{
     background-image: url(https://img.freepik.com/premium-photo/abstract-grey-canvas-texture-vintage-book-cover-background_1484-1668.jpg) ;
 }
@@ -104,6 +114,26 @@
     font-weight: 500;
     transition-duration: .3s;
 }
+#mainlibdiv{
+    background-image: url(https://www.tilelook.com/system/tile_picture/resource/15787994/d3d_default_URBEX_STYLE_WHITE_60X120_001.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+    padding-top: 20px;
+    padding-bottom: 50px;
+    
+}
+#bookcards{
+    background-color:white;
+    margin-top: 40px;
+    width: 20rem;
+    border-radius: 0px;
+    height: 36rem;
+}
+#bookcards:hover{
+  background-color: rgb(192, 204, 204);
+  transition-duration: .2s;
+}
 
 @media screen and (max-width:768px){
     .mbut{
@@ -134,8 +164,21 @@
         width: 170px;
         font-size: medium;
        
-       
     }
+    #bookcards{
+     margin-top: 20px;
+    }
+    #homesubdiv{
+        margin-left: 5px;
+        margin-top: 50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.4);
+        border-radius: 10px;
+        width: 100%;
+    }
+   
 }
 
 
