--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,14 @@
     }#libdiv{
         height: 550px;
     }
+    #nav1{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    #nav2{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
 
 @media screen and (max-width:440px){
@@ -177,6 +185,14 @@
         background-color: rgba(0, 0, 0, 0.4);
         border-radius: 10px;
         width: 100%;
+    }
+    #nav2{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    #nav1{
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
    
 }
